--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   mongo_dart: ^0.7.4
+  path_provider: ^2.0.9
+  syncfusion_flutter_datagrid: ^19.1.69-beta
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
